--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"swiper": "^8.4.5"
+	}
 }
